Add controllerButtons div, Add setDensity button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
   </div>
 
+  <div class="controllerButtons">
+    <button class="setDensity">Set Density</button>
+  </div>
 </body>
 
 </html>
