Add "Rainbow Mode"

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <div class="controllerButtons">
     <button class="setDensity">Set Density</button>
+    <button class="rainbowMode">Rainbow Mode</button>
   </div>
 </body>
 
