--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="etch-a-sketch.js" defer></script>
   <title>Etch-a-Sketch</title>
 </head>
 
@@ -21,5 +20,7 @@
     <button class="rainbowMode">Rainbow Mode</button>
   </div>
 </body>
+
+<script src="etch-a-sketch.js"></script>
 
 </html>
